VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webwar
  namespace: webwar
spec:
  gateways:
  - charles-gateway1
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /maven-generate-war
    name: webwar
    rewrite:
      uri: /
    route:
    - destination:
        host: webwar-service.webwar.svc.cluster.local
        port:
          number: 8080
        subset: v1
      weight: 100
